quatres pages finis sans responsives

--- a/category.html
+++ b/category.html
@@ -31,11 +31,11 @@
     <!-- barre de navigation -->
     <div class="nav ">
             <div class="menu-nav wrapper">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href=""> CATEGORY</a>
-                <a href=""> LATEST NEWS</a>
-                <a href="">CONTACT</a>
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="category.html"> CATEGORY</a>
+                <a href="latestnews.html"> LATEST NEWS</a>
+                <a href="contact.html">CONTACT</a>
             </div>
             <!-- <div class="icones-nav">
                 <a href=""><i class="fa-brands fa-facebook-f"></i></a>
@@ -47,91 +47,143 @@
             </div> -->
     </div>
    </header>
-   <main>
-    <section class="whats-new wrapper">
+   <main class="wrapper">
+   
           <!-- le titre de whtas news avec le menu -->
-          <article class="lifestyle">
-            <div class="title-menu">
-                <h1>whats New</h1>
-                <div class="lifestyle-menu">
-                    <a href="">Lifestyle</a>
-                    <a href="">Travel</a>
-                    <a href=""> Fashion</a>
-                    <a href=""> Sports</a>
-                    <a href="">Technology</a>
+        <section class="bloc-deux-colonnes">
+            <article class="lifestyle">
+                <div class="title-menu">
+                        <h1>whats New</h1>
+                        <div class="lifestyle-menu">
+                            <a href="">Lifestyle</a>
+                            <a href="">Travel</a>
+                            <a href=""> Fashion</a>
+                            <a href=""> Sports</a>
+                            <a href="">Technology</a>
+                        </div>
                 </div>
-            </div>
-            <article class="six-blog">
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details2.png" alt="whats_news_details2">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details3.png" alt="whats_news_details3">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details4.png" alt="whats_news_details4">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details5.png" alt="whats_news_details5">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
-                <div class="whats-news-détails">
-                    <img src="img/gallery/whats_news_details6.png" alt="whats_news_details6">
-                    <h2>Secretart for Economic Air plane that looks like</h2>
-                    <p>by Alice cloe - Jun 19, 2020</p>
-                    <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
-                </div>
+                <article class="six-blog">
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details1.png" alt="whats_news_details1">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details2.png" alt="whats_news_details2">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details3.png" alt="whats_news_details3">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details4.png" alt="whats_news_details4">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details5.png" alt="whats_news_details5">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
+                    <div class="whats-news-détails">
+                        <img src="img/gallery/whats_news_details6.png" alt="whats_news_details6">
+                        <h2>Secretart for Economic Air plane that looks like</h2>
+                        <p>by Alice cloe - Jun 19, 2020</p>
+                        <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
+                    </div>
             </article>
-
-    </section>
-    <section>
-        <article class="reseaux-sociaux">
-            <div class="fans">
-                <a href=""><img src=" img/news/icon-fb.png" alt="icon-fb"></a>
-                <p>8,045
-                    Fans</p>
-            </div>
-            <div class="fans">
-                <a href=""><img src=" img/news/icon-ins.png" alt="icon-ins"></a>
-                <p>8,045
-                    Fans</p>
-            </div>
-            <div class="fans">
-                <a href=""><img src=" img/news/icon-tw.png" alt="icon-tw"></a>
-                <p>8,045
-                    Fans</p>
-            </div>
-            <div class="fans">
-                <a href=""><img src=" img/news/icon-yo.png" alt="icon-yo"></a>
-                <p>8,045
-                    Fans</p>
-            </div>
-
         </article>
-        <article>
-            <img src="img/news/news_card.jpg" alt="news_card">
-        </article>
-
-    </section>
+            <div class="bloc-deux-lignes">
+                <div class="conture-reseaux-sociaux">
+                    <article class="reseaux-sociaux">
+                        <div class="fans">
+                            <a href=""><img src=" img/news/icon-fb.png" alt="icon-fb"></a>
+                            <p>8,045
+                                Fans</p>
+                        </div>
+                        <div class="fans">
+                            <a href=""><img src=" img/news/icon-ins.png" alt="icon-ins"></a>
+                            <p>8,045
+                                Fans</p>
+                        </div>
+                        <div class="fans">
+                            <a href=""><img src=" img/news/icon-tw.png" alt="icon-tw"></a>
+                            <p>8,045
+                                Fans</p>
+                        </div>
+                        <div class="fans">
+                            <a href=""><img src=" img/news/icon-yo.png" alt="icon-yo"></a>
+                            <p>8,045
+                                Fans</p>
+                        </div>
+                    </article>
+                </div>
+                <article class="music-events">
+                    <img src="img/news/news_card.jpg" alt="news_card">
+                </article>
+                
+                    </article>
+            </div>
+        </section>
 
    </main>
+   <footer>
+    <section class="wrapper trois-parties">
+        <article class="footer-news">
+          <div class="footer-news-content"> 
+        <a href=""> <img src="img/logo/logo2_footer.png" alt="logo2_footer"></a></div>
+            <div><p>Lorem ipsum dolor sit amet, nsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p></div>
+            <div> <p>198 West 21th Street, Suite 721 New</p>
+              <p>York,NY 10010</p>
+         </div>
+            <div>
+                <p>Phone: +95 (0) 123 456 789 Cell: +95 (0) 123 456 789</p>
+            </div>
+        </article>
+        <article class="popular-post">
+            <div><p>Popular post</p></div>
+           <div class="most-recent-deux"> 
+                <img src="img/gallery/footer_post1.png" alt="footer_post1">
+                <div class="blog-content">
+                    <a href="">
+                        <p>Scarlett’s disappointment at latest accolade</p>
+                    </a>
+                    <span>Jhon | 2 hours ago</span>
+                </div>
+            </div>
+            <div class="most-recent-deux"> 
+                <img src="img/gallery/footer_post2.png" alt="footer_post2">
+                <div class="blog-content">
+                    <a href="">
+                        <p>Scarlett’s disappointment at latest accolade</p>
+                    </a>
+                    <span>Jhon | 2 hours ago</span>
+                </div>
+            </div>
+            <div class="most-recent-deux"> 
+                <img src="img/gallery/footer_post3.png" alt="footer_post3">
+                <div class="blog-content">
+                    <a href="">
+                        <p>Scarlett’s disappointment at latest accolade</p>
+                    </a>
+                    <span>Jhon | 2 hours ago</span>
+                </div>
+            </div>
+        </article>
+        <article>
+            <a href=""><img src="img/gallery/body_card2.png" alt="body_card2"></a>
+        </article>
+
+    </section>
+   </footer>
     
 </body>
 </html>
