--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,9 @@
         </div>
        </header>
        <main class="wrapper">
-        <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5049.441716045544!2d4.875885!3d50.743666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c171e20bd83b53%3A0x19506a434b602eef!2sRue%20Sainte-Marie%2022%2C%201370%20Jodoigne!5e0!3m2!1sfr!2sbe!4v1675256610729!5m2!1sfr!2sbe" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-        <article>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5049.441716045544!2d4.875885!3d50.743666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c171e20bd83b53%3A0x19506a434b602eef!2sRue%20Sainte-Marie%2022%2C%201370%20Jodoigne!5e0!3m2!1sfr!2sbe!4v1675256610729!5m2!1sfr!2sbe" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <article class="get-in-touch">
             <div>
                 <h2>Get in Touch</h2>
                 <textarea name="" id="" cols="110" rows=""></textarea>
