--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>News</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="isActive">
@@ -140,7 +140,7 @@
                         <span>by Alice cloe - Jun 19, 2020</span>
                         <p>Struggling to sell one multi-million dollar home currently on the market won’t stop actress and singer Jennifer Lopez.</p>
                     </div>
-                    <div>
+                    <div class="responsive">
                         <div class="whats-news-fashion">
                          <img src="img/gallery/whats_right_img1.png"alt="whats_right_img1">
                             <div class="whats-news-fashion-text">
